# crypto-backtesting

./: .gitignore  README.md  pyproject.toml
backtesting/: __init__.py  simulation.py  strategy.py
crypto_backtesting/: __init__.py  simulation.py  strategy.py
