[tool.poetry]
name = "crypto_backtesting"
version = "0.1.1"
description = "Trading strategy backtesting library for crypto."
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]
license = "BSD-3-Clause"
include = ["crypto_backtesting/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pdoc = "^10.0.4"
matplotlib = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
