[tool.poetry]
name = "crypto-backtesting"
version = "1.0.0"
description = "Specialized trading strategy backtesting library for crypto."
authors = ["Elias Gabriel <me@eliasfgabriel.com>"]
license = "BSD-3-Clause"
packages = [ { include = "backtesting" } ]
include = ["backtesting/py.typed"]
documentation = "https://backcrypto.thearchitector.dev"
repository = "https://github.com/thearchitector/crypto-backtesting"
readme = "README.md"
keywords = ["cryptocurrency", "data", "finance", "backtesting", "science"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.1"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pdoc = "^10.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
